# stats315winter2026

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GroupWork1.ipynb  GroupWork2.ipynb  Homework1.ipynb  Homework2.ipynb  README.md  make_student_template.py  make_student_version.py  pyproject.toml
.claude/commands/: critique-assignment.md  improve-assignment.md
datasci315/groupwork1/: CRITIQUE.md  groupwork1.ipynb
datasci315/groupwork10/: CRITIQUE.md  groupwork10.ipynb
datasci315/groupwork11/: CRITIQUE.md  groupwork11.ipynb
datasci315/groupwork12/: CRITIQUE.md  groupwork12.ipynb
datasci315/groupwork2/: CRITIQUE.md  groupwork2.ipynb
datasci315/groupwork3/: CRITIQUE.md  groupwork3.ipynb
datasci315/groupwork4/: CRITIQUE.md  groupwork4.ipynb
datasci315/groupwork5/: CRITIQUE.md  groupwork5.ipynb
datasci315/groupwork6/: groupwork6.ipynb
datasci315/groupwork7/: CRITIQUE.md  groupwork7.ipynb
datasci315/groupwork8/: CRITIQUE.md  groupwork8.ipynb
datasci315/groupwork9/: CRITIQUE.md  groupwork9.ipynb
datasci315/homework1/: homework1.ipynb
datasci315/homework10/: CRITIQUE.md  homework10.ipynb
datasci315/homework2/: homework2.ipynb
datasci315/homework3/: homework3.ipynb
datasci315/homework4/: homework4.ipynb
datasci315/homework5/: CRITIQUE.md  homework5.ipynb
datasci315/homework6/: CRITIQUE.md  homework6.ipynb
datasci315/homework7/: CRITIQUE.md  homework7.ipynb
datasci315/homework8/: CRITIQUE.md  homework8.ipynb
datasci315/homework9/: CRITIQUE.md  homework9.ipynb
datasci503/groupwork1/: CRITIQUE.md  groupwork1.ipynb
datasci503/groupwork10/: CRITIQUE.md  groupwork10.ipynb
datasci503/groupwork11/: CRITIQUE.md  groupwork11.ipynb
datasci503/groupwork12/: CRITIQUE.md  groupwork12.ipynb
datasci503/groupwork13/: CRITIQUE.md  groupwork13.ipynb
datasci503/groupwork2/: CRITIQUE.md  groupwork2.ipynb
datasci503/groupwork3/: CRITIQUE.md  groupwork3.ipynb
datasci503/groupwork4/: CRITIQUE.md  groupwork4.ipynb
datasci503/groupwork5/: CRITIQUE.md  groupwork5.ipynb
datasci503/groupwork6/: CRITIQUE.md  groupwork6.ipynb
datasci503/groupwork7/: CRITIQUE.md  groupwork7.ipynb
datasci503/groupwork8/: CRITIQUE.md  groupwork8.ipynb
datasci503/groupwork9/: CRITIQUE.md  groupwork9.ipynb
datasci503/homework1/: CRITIQUE.md  homework1.ipynb
datasci503/homework10/: CRITIQUE.md  homework10.ipynb
datasci503/homework2/: CRITIQUE.md  homework2.ipynb
datasci503/homework3/: CRITIQUE.md  homework3.ipynb
datasci503/homework4/: CRITIQUE.md  homework4.ipynb
datasci503/homework5/: CRITIQUE.md  homework5.ipynb
datasci503/homework6/: CRITIQUE.md  homework6.ipynb
datasci503/homework7/: CRITIQUE.md  homework7.ipynb
datasci503/homework8/: CRITIQUE.md  homework8.ipynb
datasci503/homework9/: CRITIQUE.md  homework9.ipynb
