[project]
name = "datasci-315"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "scikit-image>=0.25.2",
    "torch>=2.9.1",
    "typer>=0.21.0",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
    "pre-commit>=4.0.0",
    "nbstripout>=0.8.2",
]

[project.scripts]
release = "release:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FBT",    # flake8-boolean-trap
    "LOG",    # flake8-logging
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
]

ignore = [
    "T201",   # print statements OK for notebooks
    "S101",   # assert statements OK for tests
    "PLR2004", # magic values OK in educational code
    "ERA001", # commented code OK for educational purposes
    "COM812", # conflicts with ruff formatter
    "RET505", # elif after return OK for pedagogical clarity
    "UP032",  # .format() OK when teaching string formatting
]

[tool.ruff.lint.per-file-ignores]
"make_student_version.py" = [
    "C901",    # CLI commands have inherent complexity
    "PLR0912", # CLI commands have many branches for validation output
    "S603",    # subprocess with hardcoded commands is fine
    "S607",    # partial executable path is fine for internal tools
    "FBT001",  # Typer CLI requires boolean positional args
    "FBT002",  # Typer CLI requires boolean defaults
]
"*.ipynb" = [
    "F821",    # undefined names expected (cross-cell references)
    "F811",    # redefinitions expected (teaching same concept multiple ways)
    "PT018",   # compound assertions OK for concise hidden tests
]
"Homework1.ipynb" = [
    "PERF401", # teaching loops before comprehensions
    "PLR0133", # teaching type coercion behavior
    "SIM118",  # explicit .keys() for teaching dict iteration
    "RUF015",  # slice readability over next(iter(...))
    "FBT002",  # teaching function default arguments
]
"Homework2.ipynb" = [
    "SIM102",  # nested ifs for pedagogical clarity
]
"GroupWork2.ipynb" = [
    "PLR0913", # neural net functions need many parameters
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
